<resources>
    <string name="app_name">Zest</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="reset">Reset</string>
    <string name="submit">Submit</string>
    <string name="cancel">cancel</string>
    <string name="sign_up">sign up</string>
    <string name="Cancel">Cancel</string>
    <string name="Email">Email</string>
    <string name="zest">Zest</string>
    <string name="signUpPage">Sign Up</string>
    <string name="login_signUp">Login</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="title">Title</string>
    <string name="add_a_recipe">Add a Recipe!</string>
    <string name="add_a_recipe">Add a Recipe!</string>
</resources>
