<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:id="@+id/rootLayout"
    tools:context=".MainActivity">
    <LinearLayout
        android:id="@+id/ll_main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="25dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@color/colorPrimary"
            android:padding="30dp"
            android:text="@string/login"
            android:typeface="serif"/>
        <EditText
            android:id="@+id/et_email"
            android:hint="@string/Email"
            android:textColor="#6bfff7"
            android:textColorHint="@color/colorPrimary"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:typeface="serif"/>
        <EditText
            android:id="@+id/et_password"
            android:hint="@string/password"
            android:textColor="#6bfff7"
            android:textColorHint="#52afaa"
            android:layout_gravity="center"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:typeface="serif"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="25dp"
            android:orientation="horizontal"
            android:typeface="serif">
            <Button
                android:id="@+id/btn_submit"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:typeface="serif"/>
            <Button
                android:id="@+id/btn_cancel"
                android:text="@string/Cancel"
                android:textAllCaps="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:typeface="serif"/>

        </LinearLayout> <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="@color/colorPrimary"
        android:padding="10dp"
        android:text="@string/sign_up"
        android:typeface="serif"/>
    </LinearLayout>

</RelativeLayout>