<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:ems="10"
        android:id="@+id/title_edit_text"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent" android:hint="@string/title" android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:inputType="textMultiLine|textCapSentences"
        android:hint="@string/ingredients"
        android:gravity="top|left"
        android:ems="10"
        android:id="@+id/ingredients_edit_text" android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/title_edit_text"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:inputType="textPersonName"
        android:hint="@string/instructions"
        android:gravity="top|left"
        android:ems="10"
        android:id="@+id/instructions_edit_text" android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/ingredients_edit_text" android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="RtlHardcoded" />

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>